# Dining-Philosophers-CPP

./: .gitignore  CMakeLists.txt
SouperDesSages/include/: Chopstick.h  Dinner.h  Sage.h  UserInterface.h
SouperDesSages/src/: Chopstick.cpp  Dinner.cpp  Sage.cpp  UserInterface.cpp  main.cpp
